--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -6,7 +6,7 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <app-recipes-iteam *ngFor="let recipeEl of recipes" [recipe]="recipeEl" (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipes-iteam>
+    <app-recipes-iteam *ngFor="let recipeEl of recipes" [recipe]="recipeEl"></app-recipes-iteam>
   </div>
 </div>
 
