--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,21 +7,21 @@
       <a routerLink="/" class="navbar-brand">Recipe Book</a>
     </div>
     <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
-     <div class="collapse navbar-collapse">
-       <ul class="nav navbar-nav">
-         <li><a routerLinkActive="active" routerLink="/recipes">Recipes</a></li>
-         <li><a routerLinkActive="active" routerLink="/shopping-list">Shopping List</a></li>
-       </ul>
-       <ul class="nav navbar-nav navbar-right">
-         <li class="dropdown" appDropdown>
-           <a style="cursor: pointer" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
-           <ul class="dropdown-menu">
-             <li><a style="cursor: pointer">Save data</a></li>
-             <li><a hstyle="cursor: pointer">Fetch data</a></li>
-           </ul>
-         </li>
-       </ul>
-     </div>
-  </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a routerLinkActive="active" routerLink="/recipes">Recipes</a></li>
+          <li><a routerLinkActive="active" routerLink="/shopping-list">Shopping List</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown" appDropdown>
+            <a style="cursor: pointer" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a style="cursor: pointer" (click)="onSaveData()">Save data</a></li>
+              <li><a style="cursor: pointer" (click)="onFetchData()">Fetch data</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </nav>
